[package]
name = "net-core-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
frida = { version = "0.16.7", features = ["auto-download"] }
frida-gum = { version = "0.16.7", features = ["backtrace", "auto-download"] }
libloading = "0.8.6"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros"] }
