[package]
name = "net-core-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
frida = { version = "0.16.7", features = ["auto-download"] }
netcorehost = { version = "0.17.0" }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
